# figcone_shoal

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: figcone_shoalConfig.cmake.in
include/figcone_shoal/: parser.h
include/figcone_shoal/detail/: configreadresult.h  gsl_util.h  nodeparser.h  paramparser.h  stream.h  utils.h
src/: configreadresult.h  nodeparser.cpp  nodeparser.h  paramparser.cpp  paramparser.h  parser.cpp  stream.cpp  stream.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_nodelistparser.cpp  test_nodeparser.cpp  test_paramlistparser.cpp  test_paramparser.cpp
